Module 4 - Parallax Images and Fixed Navigation (Pinned)

--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
 				<!-- /Portfolio -->
 
 				<!-- Blog -->
-				<section class="blog with-padding-bottom with-parallax">
+				<section class="blog with-padding-bottom">
 					<h2 class="chapter"><span>003 -</span> Blog</h2>
-					<div class="blog__post">
+					<div class="blog__post with-parallax">
 						<div class="blog__image">
 							<img src="./img/img_portfolio-02-480-720.jpg" />
 						</div>
@@ -350,11 +350,9 @@
 				<!-- /How We Work -->
 
 				<!-- Contact -->
-				<section
-					class="contact with-padding-bottom is-flipped with-parallax"
-				>
+				<section class="contact with-padding-bottom is-flipped">
 					<h2 class="chapter"><span>005 -</span> Contact</h2>
-					<div class="blog__post">
+					<div class="blog__post with-parallax">
 						<div class="blog__image">
 							<img src="./img/img_portfolio-02-480-720.jpg" />
 						</div>
@@ -373,10 +371,7 @@
 		<!-- #main-container -->
 
 		<!-- fill background between sections with margin - eg. portfolio  -->
-		<aside
-			class="fill-background"
-			style="background-color: #acb7ae"
-		></aside>
+		<aside class="fill-background"></aside>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/ScrollTrigger.min.js"></script>
