Module 6 - Loading Animation do Optimizing Loader. Objasnjenje zasto je sve moguce position: absolute ili fixed. GSAP je optimizovao tako pozicionirane elemente...
CSS optimizing hack za nepozicionirane absolute ili fixed elemente: will-change: transform | transform: translateZ(0) | backface-visibillity: hidden

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 		/>
 	</head>
 
-	<body>
+	<body class="is-loading">
 		<div class="loader">
 			<div class="loader__mask">
 				<div class="inner"></div>
 				<!-- this will scale up -->
 			</div>
 		</div>
+
 		<div class="loader__content">
 			<div class="inner">
 				<!-- this will be animated on top of the dark background -->
@@ -419,6 +420,7 @@
 		></script>
 		<script src="https://unpkg.com/smooth-scrollbar@latest/dist/smooth-scrollbar.js"></script>
 
+		<script src="js/GSDevTools.min.js" defer></script>
 		<script src="js/main.js" defer></script>
 	</body>
 </html>
