--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 	<body class="is-loading">
 		<div class="loader">
 			<div class="loader__mask">
-				<div class="inner"></div>
+				<div class="inner">
+					<div class="progress"></div>
+				</div>
 				<!-- this will scale up -->
 			</div>
 		</div>
@@ -400,6 +402,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsa p/3.4.2/ScrollToPlugin.min.js"></script>
 		<script src="https://unpkg.com/smooth-scrollbar@latest/dist/smooth-scrollbar.js"></script> -->
 
+		<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"
 			integrity="sha512-pCPP9sfLW9T7EZiw725jUl+ux032sjGhFE+ZAx00C1iO55ZmZJWpfNGbDf2ZF5b0UqxRqSW548PbZEWmH+S7pA=="
