--- a/index2.html
+++ b/index2.html
@@ -69,11 +69,11 @@
 		<div id="viewport">
 			<!-- <div id="scroll-container"> -->
 			<main id="main" data-barba="container">
-				<header data-color="#ACB7AE">
+				<header data-color="#ACB7AE" style="background-color: #b0a7a4">
 					<h1>
-						<span>Consectetur</span>
-						<span>Adipisicing</span>
-						<span>Elites</span>
+						<span>Another</span>
+						<span>Awesome</span>
+						<span>Title</span>
 					</h1>
 					<p class="subtitle">
 						VOLUPTAS AUT <br />& VERITASIS NOSTRUM
@@ -391,8 +391,8 @@
 			<!-- #scroll-container -->
 		</div>
 		<!-- #viewpoer -->
-
-		<!-- <div
+		<!-- 
+		<div
 			class="transition"
 			style="
 				position: fixed;
@@ -406,8 +406,6 @@
 		>
 			TRANSITION
 		</div> -->
-
-		<!-- ! sve unutar <main> tj tu gde je data-barba="container" ce biti zamenjeno sadrzajem dolazece stranice -->
 
 		<!-- fill background between sections with margin - eg. portfolio  -->
 		<aside class="fill-background"></aside>
